# PPP-Project

./: 1_gerar_despesas.c  2_analisar_despesas.c  CMakeLists.txt  Declaracoes.h  Estruturas.h  Funcoes.c  main.c  readme.txt.txt
DOCUMENTOS/: Despesas.txt  Enunciado.txt  Orcamentos.txt
